# NN-CUDA-Example

./: CMakeLists.txt  README.md  add2.cpp  add2.cu  main.py  setup.py  time.py  train.py
include/: add2.h
kernel/: CMakeLists.txt  add2.cpp
pytorch/: CMakeLists.txt  add2_ops.cpp  setup.py  time.py  train.py
tensorflow/: CMakeLists.txt  add2_ops.cpp  time.py  train.py
